💄 Fix gap between sections

--- a/src/options/options.scss
+++ b/src/options/options.scss
@@ -23,7 +23,7 @@ input {
 .container {
   display: flex;
   flex-direction: column;
-  gap: 8 * $size;
+  gap: 6 * $size;
 }
 
 .title {
